# zkteco-to-db

./: .gitignore  README.md  brevo_service.py  config.py  config_loader.py  connect.py  const.py  docker-compose.yml  excel_service.py  init_db.py  mail_service.py  main.py  model.py  pyproject.toml  sendgrid_service.py  zkteco.py
